# bnb-multilang-bot

./: .env.example  .replit  DEPLOYMENT.md  Procfile  README.md  TROUBLESHOOTING.md  bot.py  config.py  languages.json  main.py  pyproject.toml  render.yaml  replit.md  requirements-render.txt  requirements.txt  start.sh  translation_service.py  wsgi.py
attached_assets/: Pasted--Build-successful-Aug-7-09-37-56-PM-Deploying-Aug-7-09-38-08-PM-Running-gunico-1754582912659_1754582912661.txt  Pasted-Requirement-already-satisfied-flask-in-pythonlibs-lib-python3-11-site-packages-3-1-1-Requirem-1754576566978_1754576566991.txt
