[project]
name = "telegram-translation-bot"
version = "0.1.0"
description = "Telegram bot for translating messages to Indian regional languages"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "googletrans>=4.0.2",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
